[tool.poetry]
name = "qt-snippets"
version = "0.1.0"
description = ""
authors = ["tnahs <31777797+tnahs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
